scheek100-resumeUpdatesHtml-v03-Corrected-9.28.25

--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
         <p class="framed-subtitle">Experience and technical expertise at a glance.</p>
       </div><!-- End Section Title -->
 
-      <!-- SUMMARY -->
+      <!-- Neon Framed Resume Body -->
       <div class="container neon-paragraph" data-aos="fade-up" data-aos-delay="100">
         <div class="row">
-          <div class="col-lg-6"><!--LEFT COLUMN-->
+          <div class="col-lg-6">
             <h3 class="my-3">Summary</h3>
             <div class="resume-item ps-4 position-relative">
               <h4 class="mb-2">Sasha Cheek</h4>
@@ -201,23 +201,41 @@
                   communication. Seeking freelance writer opportunities to translate engineering concepts for general
                   audiences.
                 </em>
-              </p>
+              </p><!--Additional info (email address, location, etc.)-->
+              <!--<p class="description"><span class="bullet">&bull; Portland par 127, Orlando, FL</span></p>
+              <p class="description"><span class="bullet">&bull; +(123) 456-7891</span></p>
+              <p class="description"><span class="bullet">&bull; alice.barkley@example.com</span></p> -->
             </div>
-          </div><!--/LEFT COLUMN-->
+            <!--EDUCATION-->
+            <h3 class="my-3">Education</h3>
+            <div class="resume-item ps-4 pb-4 position-relative">
+              <h4 class="mb-2">Master of Arts in Science Writing</h4>
+              <h5 class="py-1 px-2 mb-2">2025 - 2027</h5>
+              <p><em>Johns Hopkins University, Baltimore, MD (Remote)</em></p>
+              <p class="description"><span class="bullet">&bull; In progress (4.0 GPA)</span></p>
+            </div>
+
+            <div class="resume-item ps-4 position-relative">
+              <h4 class="mb-2">Bachelor of Science in Electronics Engineering Technology (ABET-Accredited)</h4>
+              <h5 class="py-1 px-2 mb-2">2015 - 2018</h5>
+              <p><em>North Carolina A&amp;T State University, Greensboro, NC</em></p>
+              <!--<p class="description"><span class="bullet">&bull; Quia nobis sequi est occaecati aut. Repudiandae et
+                  iusto quae
+                  reiciendis...</span></p> -->
+            </div>
+          </div>
           <!--EXPERIENCE-->
-          <div class="col-lg-6"><!--RIGHT COLUMN-->
+          <div class="col-lg-6">
             <h3 class="my-3">Experience</h3>
             <div class="resume-item ps-4 pb-4 position-relative">
               <h4 class="mb-2">Technical Integrations Specialist</h4>
               <h5 class="py-1 px-2 mb-2">2023 - Present</h5>
               <p><em>Indeed.com, Research Triangle Park, NC (Remote)</em></p>
               <p class="description"><span class="bullet">&bull; Manage Integraton Lifecycle Management (ILM) for high
-                  spending partners' integrations, including configuration, testing, deployment, monitoring, and
-                  version
+                  spending partners' integrations, including configuration, testing, deployment, monitoring, and version
                   control</span></p>
               <p class="description"><span class="bullet">&bull; Recognized as trusted subject matter expert (SME) on
-                  API and data feed integrations, advising cross-functional teams on best practices for scalable
-                  system
+                  API and data feed integrations, advising cross-functional teams on best practices for scalable system
                   architecture and design
                   materials</span></p>
               <p class="description"><span class="bullet">&bull; Led cross-functional investigation in July 2025 to
@@ -249,8 +267,8 @@
               <h4 class="mb-2">Technical Program Manager</h4>
               <h5 class="py-1 px-2 mb-2">2019 - 2022</h5>
               <p><em>Various Projects, Research Triangle Park, NC (Remote) </em></p>
-              <p class="description"><span class="bullet">&bull; Led migration for 3500+ content delivery
-                  network (CDN) pages, and made Microsoft products more accessible
+              <p class="description"><span class="bullet">&bull; Led migration for 3500+ CDN (content delivery network)
+                  pages, and made Microsoft products more accessible
                   to end-users for online orders using Akamai software</span></p>
               <p class="description"><span class="bullet">&bull; Communicated technical CDN workflows to global
                   stakeholders via automated dashboards (Power BI/Azure
@@ -258,8 +276,7 @@
               <p class="description"><span class="bullet">&bull; Onboarded the highest number of partner integrations
                   during tenure while owning 7-8 concurrent projects,
                   outperforming previous TPMs within the team</span></p>
-              <p class="description"><span class="bullet">&bull; Trained new program managers and engineers on the
-                  team
+              <p class="description"><span class="bullet">&bull; Trained new program managers and engineers on the team
                   for API integrations and processes</span></p>
             </div>
 
@@ -267,35 +284,18 @@
               <h4 class="mb-2">Technical Business Analyst</h4>
               <h5 class="py-1 px-2 mb-2">2019 - 2021</h5>
               <p><em>Hudson MX, Atlanta, GA </em></p>
-              <p class="description"><span class="bullet">&bull; Led API gateway and credential management to
-                  streamline
+              <p class="description"><span class="bullet">&bull; Led API gateway and credential management to streamline
                   secure partner integrations while shadowing DevOps SME</span></p>
               <p class="description"><span class="bullet">&bull; Created high-impact technical docs—APIs, ERDs, test
                   cases—that improved onboarding and cross-team collaboration</span></p>
               <p class="description"><span class="bullet">&bull; Onboarded the highest number of partner integrations
                   during tenure while owning 7-8 concurrent projects,
                   outperforming previous TPMs within the team</span></p>
-              <p class="description"><span class="bullet">&bull; Secured a startup ad-tech position via Media Corp.
-                  referrals, recognized for high-impact contributions in the 2018
-                  technical product management apprenticeship program</span></p>
+              <p class="description"><span class="bullet">&bull; Trained new program managers and engineers on the team
+                  for API integrations and processes</span></p>
             </div>
           </div>
-          <!--EDUCATION-->
-          <h3 class="my-3">Education</h3>
-          <div class="resume-item ps-4 pb-4 position-relative">
-            <h4 class="mb-2">Master of Arts in Science Writing</h4>
-            <h5 class="py-1 px-2 mb-2">2025 - 2027</h5>
-            <p><em>Johns Hopkins University, Baltimore, MD (Remote)</em></p>
-            <p class="description"><span class="bullet">&bull; In progress (4.0 GPA)</span></p>
-          </div>
-
-          <div class="resume-item ps-4 position-relative">
-            <h4 class="mb-2">Bachelor of Science in Electronics Engineering Technology (ABET-Accredited)</h4>
-            <h5 class="py-1 px-2 mb-2">2015 - 2018</h5>
-            <p><em>North Carolina A&amp;T State University, Greensboro, NC</em></p>
-          </div>
         </div>
-      </div><!--End Row -->
     </section>
     <!-- /Resume Section -->
 
