--- a/index.html
+++ b/index.html
@@ -286,13 +286,9 @@
               <p><em>Hudson MX, Atlanta, GA </em></p>
               <p class="description"><span class="bullet">&bull; Led API gateway and credential management to streamline
                   secure partner integrations while shadowing DevOps SME</span></p>
-              <p class="description"><span class="bullet">&bull; Created high-impact technical docs—APIs, ERDs, test
-                  cases—that improved onboarding and cross-team collaboration</span></p>
-              <p class="description"><span class="bullet">&bull; Onboarded the highest number of partner integrations
-                  during tenure while owning 7-8 concurrent projects,
-                  outperforming previous TPMs within the team</span></p>
-              <p class="description"><span class="bullet">&bull; Trained new program managers and engineers on the team
-                  for API integrations and processes</span></p>
+              <p class="description"><span class="bullet">&bull; Created high-impact technical docs— APIs, ERDs, and test
+                  cases— that improved onboarding and cross-team collaboration</span></p>
+              <p class="description"><span class="bullet">&bull; Secured a startup ad-tech position via Warner Bros. Discovery referrals, recognized for high-impact contributions in the 2018 NCAA Digital technical product management apprenticeship program</span></p>      
             </div>
           </div>
         </div>
