--- a/index.html
+++ b/index.html
@@ -267,14 +267,14 @@
               <h4 class="mb-2">Technical Program Manager</h4>
               <h5 class="py-1 px-2 mb-2">2019 - 2022</h5>
               <p><em>Various Projects, Research Triangle Park, NC (Remote) </em></p>
-              <p><em><b>Microsoft (2022 - 2023) </b> </em></p>
+              <p><em><b>Microsoft (2022)</b></em></p>
               <p class="description"><span class="bullet">&bull; Led migration for 3500+ CDN (content delivery network)
                   pages, and made Microsoft products more accessible
                   to end-users for online orders using Akamai software</span></p>
               <p class="description"><span class="bullet">&bull; Communicated technical CDN workflows to global
                   stakeholders via automated dashboards (Power BI/Azure
                   DevOps), reducing misalignment by 30%</span></p>
-<p><em><b>Credit Karma (2021 - 2022) </b></em></p>
+<p><em><b>Credit Karma (2021 - 2022)</b></em></p>
               <p class="description"><span class="bullet">&bull; Onboarded the highest number of partner integrations
                   during tenure while owning 7-8 concurrent projects,
                   outperforming previous TPMs within the team</span></p>
