scheek100-resumeUpdatesHtml-textEdits-9.28.25

--- a/index.html
+++ b/index.html
@@ -231,15 +231,15 @@
               <h4 class="mb-2">Technical Integrations Specialist</h4>
               <h5 class="py-1 px-2 mb-2">2023 - Present</h5>
               <p><em>Indeed.com, Research Triangle Park, NC (Remote)</em></p>
-              <p class="description"><span class="bullet">&bull; Manage Integraton Lifecycle Management (ILM) for high
+              <p class="description"><span class="bullet">&bull; Manage ILM (Integraton Lifecycle Management) for high
                   spending partners' integrations, including configuration, testing, deployment, monitoring, and version
                   control</span></p>
-              <p class="description"><span class="bullet">&bull; Recognized as trusted subject matter expert (SME) on
-                  API and data feed integrations, advising cross-functional teams on best practices for scalable system
+              <p class="description"><span class="bullet">&bull; Recognized as trusted SME (subject matter expert) on
+                  API (application programming interface) and data feed integrations, advising cross-functional teams on best practices for scalable system
                   architecture and design
                   materials</span></p>
               <p class="description"><span class="bullet">&bull; Led cross-functional investigation in July 2025 to
-                  mitigate 3rd party partner application programming interface (API) abuse patterns, and proposed
+                  mitigate 3rd party partner GraphQL API abuse patterns, and proposed
                   a data pipeline solution to centralize and improve all company API observability</span></p>
               <p class="description"><span class="bullet">&bull; Engineered and launched 20+ complex API and XML feed
                   integrations from 2023 to the present day</span></p>
@@ -249,7 +249,7 @@
               <h4 class="mb-2">Freelance Science Writer</h4>
               <h5 class="py-1 px-2 mb-2">2024 - Present</h5>
               <p><em>Independent, Research Triangle Park, NC</em></p>
-              <p class="description"><span class="bullet">&bull; Interviewed leading experts, including two particle
+              <p class="description"><span class="bullet">&bull; Interviewed leading experts, including 2 particle
                   physicists and the Harvard director of neurology, to produce
                   authoritative science articles about cosmic radiation impact on astronauts and brain-computer
                   interfaces (BCIs)
@@ -257,7 +257,6 @@
               <p class="description"><span class="bullet">&bull; Created a website using Bootstrap, JavaScript, HTML,
                   CSS, and Git to advertise writing and technical portfolios of work</span>
               </p>
-              <p class="description"><span class="bullet">&bull; Recommended and consulted with clients</span></p>
               <p class="description"><span class="bullet">&bull; Conducted research using methods such as sourcing
                   peer-reviewed scientific journals and media, interviewing SMEs,
                   and fact-checking to ensure the validity of info before publishing stories</span></p>
@@ -279,7 +278,7 @@
                   during tenure while owning 7-8 concurrent projects,
                   outperforming previous TPMs within the team</span></p>
               <p class="description"><span class="bullet">&bull; Trained new program managers and engineers on the team
-                  for API integrations and processes</span></p>
+                  for RESTful API integrations and processes</span></p>
             </div>
 
             <div class="resume-item ps-4 position-relative">
@@ -288,7 +287,7 @@
               <p><em>Hudson MX, Atlanta, GA </em></p>
               <p class="description"><span class="bullet">&bull; Led API gateway and credential management to streamline
                   secure partner integrations while shadowing DevOps SME</span></p>
-              <p class="description"><span class="bullet">&bull; Created high-impact technical docs— APIs, ERDs, and test
+              <p class="description"><span class="bullet">&bull; Created high-impact technical docs— SOAP and RESTful APIs, ERDs (entity relationship diagrams), and test
                   cases— that improved onboarding and cross-team collaboration</span></p>
               <p class="description"><span class="bullet">&bull; Secured a startup ad-tech position via Warner Bros. Discovery referrals, recognized for high-impact contributions in the 2018 NCAA Digital technical product management apprenticeship program</span></p>      
             </div>
