--- a/index.html
+++ b/index.html
@@ -212,7 +212,6 @@
               <h4 class="mb-2">Master of Arts in Science Writing</h4>
               <h5 class="py-1 px-2 mb-2">2025 - 2027</h5>
               <p><em>Johns Hopkins University, Baltimore, MD (Remote)</em></p>
-              <p class="description"><span class="bullet">&bull; In progress (4.0 GPA)</span></p>
             </div>
 
             <div class="resume-item ps-4 position-relative">
@@ -251,8 +250,8 @@
               <p><em>Independent, Research Triangle Park, NC</em></p>
               <p class="description"><span class="bullet">&bull; Interviewed leading experts, including 2 particle
                   physicists and the Harvard director of neurology, to produce
-                  authoritative science articles about cosmic radiation impact on astronauts and brain-computer
-                  interfaces (BCIs)
+                  authoritative science articles about cosmic radiation impact on astronauts and BCIs (brain-computer
+                  interfaces)
                 </span></p>
               <p class="description"><span class="bullet">&bull; Created a website using Bootstrap, JavaScript, HTML,
                   CSS, and Git to advertise writing and technical portfolios of work</span>
