--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
                   <a href="assets/img/portfolio/api-1.png" title="API Project 1"
                     data-gallery="portfolio-gallery-writing" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a>
+                <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                      class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -342,8 +342,8 @@
                   <a href="assets/img/portfolio/product-1.png" title="Coding Project 1"
                     data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a>
+                <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                      class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -357,8 +357,8 @@
                   <a href="assets/img/portfolio/api-2.png" title="API Project 2"
                     data-gallery="portfolio-gallery-writing" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a>
+                 <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                      class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -372,8 +372,8 @@
                   <a href="assets/img/portfolio/product-2.png" title="Coding Project 2"
                     data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a>
+                 <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                      class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -387,8 +387,8 @@
                   <a href="assets/img/portfolio/api-3.png" title="API Project 3"
                     data-gallery="portfolio-gallery-writing" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a>
+                 <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                      class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -402,8 +402,8 @@
                   <a href="assets/img/portfolio/product-3.png" title="Coding Project 3"
                     data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a>
+                  <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                      class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
