--- a/index.html
+++ b/index.html
@@ -111,9 +111,11 @@
           </div><!-- End Section Title -->
           <div class="row gy-4 justify-content-between" data-aos="fade-up" data-aos-delay="100">
             <div class="col-lg-4 profile-img align-self-start">
+            <div class="glitch-wrapper">
               <img
                 src="https://media.licdn.com/dms/image/v2/D4E03AQFhIHTA-7Yisg/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1710599898260?e=1760572800&v=beta&t=4OgrGlAuEfvje2SDfZQ4JYN4I_4Kpzwpamn-mRMMr4w"
-                class="img-fluid" alt="">
+                class="img-fluid glitch-img" alt="">
+             </div>
             </div>
             <div class="col-lg-7 content">
               <h3>Sasha Cheek is a systems integration specialist and freelance science writer, with a hunger to
