--- a/index.html
+++ b/index.html
@@ -111,10 +111,8 @@
           </div><!-- End Section Title -->
           <div class="row gy-4 justify-content-between" data-aos="fade-up" data-aos-delay="100">
             <div class="col-lg-4 profile-img align-self-start">
-            <div class="glitch-wrapper">
-              <img
-                src="https://media.licdn.com/dms/image/v2/D4E03AQFhIHTA-7Yisg/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1710599898260?e=1760572800&v=beta&t=4OgrGlAuEfvje2SDfZQ4JYN4I_4Kpzwpamn-mRMMr4w"
-                class="img-fluid glitch-img" alt="">
+              <img src="assets/img/profile-img.png"
+                class="img-fluid hologram-img"alt="Sasha Cheek Hologram Portrait">
              </div>
             </div>
             <div class="col-lg-7 content">
