--- a/index.html
+++ b/index.html
@@ -111,8 +111,9 @@
           </div><!-- End Section Title -->
           <div class="row gy-4 justify-content-between" data-aos="fade-up" data-aos-delay="100">
             <div class="col-lg-4 profile-img align-self-start">
+            <div class="glitch-frame">
               <img src="assets/img/profile-img.png"
-                class="img-fluid hologram-img"alt="Sasha Cheek Hologram Portrait">
+                class="img-fluid glitch-img"alt="Sasha Cheek Hologram Portrait">
              </div>
             </div>
             <div class="col-lg-7 content">
