--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
             <div class="holo-static">
               <img src="assets/img/profile-img.png"
                 class="img-fluid holo-img"alt="Sasha Cheek Hologram Portrait">
+              <div class="grain"></div>
              </div>
             </div>
             <div class="col-lg-7 content">
