Dot16Gothic Font Updates - HTML - 10.5.25

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
+  <!-- link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet" -->
+<link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -67,12 +68,12 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#hero" class="active">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#resume">Resume</a></li>
+          <li><a href="#about">ABOUT</a></li>
+          <li><a href="#services">SERVICES</a></li>
+          <li><a href="#resume">RESUME</a></li>
           <li><a href="#portfolio">Tech Portfolio</a></li>
-          <li><a href="#blog-accordion">Writing</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#blog-accordion">WRITING</a></li>
+          <li><a href="#contact">CONTACT</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -106,7 +107,7 @@
       <div class="section-title">
         <div class="container content-wrap" data-aos="fade-up">
           <div class="section-title">
-            <h2>About</h2>
+            <h2>ABOUT</h2>
 
           </div><!-- End Section Title -->
           <div class="row gy-4 justify-content-between" data-aos="fade-up" data-aos-delay="100">
@@ -135,7 +136,7 @@
 
       <!-- Section Title -->
       <div class="section-title" data-aos="fade-up">
-        <h2>Services</h2>
+        <h2>SERVICES</h2>
         <p class="framed-subtitle">I provide technical consulting, science/technology writing, and mentorship to help
           organizations communicate clearly, streamline integrations, and strengthen engineering practices.</p>
       </div><!-- End Section Title -->
@@ -185,7 +186,7 @@
     <section id="resume" class="resume section-black">
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Resume</h2>
+        <h2>RESUME</h2>
         <p class="framed-subtitle">Experience and technical expertise at a glance.</p>
       </div><!-- End Section Title -->
 
@@ -302,7 +303,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Tech<br>Portfolio</h2>
+        <h2>Tech<br>PORTFOLIO</h2>
         <p class="framed-subtitle">Applying engineering to real-world challenges, involving APIs and programming
           projects. More projects coming
           soon!</p>
@@ -422,7 +423,7 @@
     <section id="blog-accordion" class="section-black py-5">
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Writing</h2>
+        <h2>WRITING</h2>
         <p class="framed-subtitle">Recent published work on Medium — expand to preview each article.</p>
       </div>
 
@@ -500,7 +501,7 @@
 
       <!-- Section Title -->
       <div class="section-title" data-aos="fade-up">
-        <h2>Testimonials</h2>
+        <h2>TESTIMONIALS</h2>
         <p class="framed-subtitle">Results recognized by former colleagues, coworkers, and clients.</p>
       </div><!-- End Section Title -->
       <div data-aos="fade-up" data-aos-delay="100">
@@ -581,7 +582,7 @@
     <section id="contact" class="contact section-black">
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Contact</h2>
+        <h2>CONTACT</h2>
         <p class="framed-subtitle">Have a question, need help with a project, or just talk about tech? I'm always happy
           to connect. Send me a
           message, and I will respond within 24-48 hours.</p>
