--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <li><a href="#about">ABOUT</a></li>
           <li><a href="#services">SERVICES</a></li>
           <li><a href="#resume">RESUME</a></li>
-          <li><a href="#portfolio">Tech Portfolio</a></li>
+          <li><a href="#portfolio">TECH PORTFOLIO</a></li>
           <li><a href="#blog-accordion">WRITING</a></li>
           <li><a href="#contact">CONTACT</a></li>
         </ul>
