--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero" class="active">Home</a></li>
+          <li><a href="#hero" class="active">HOME</a></li>
           <li><a href="#about">ABOUT</a></li>
           <li><a href="#services">SERVICES</a></li>
           <li><a href="#resume">RESUME</a></li>
           <li><a href="#portfolio">TECH PORTFOLIO</a></li>
-          <li><a href="#blog-accordion">WRITING</a></li>
+          <li><a href="#writing">WRITING</a></li>
           <li><a href="#contact">CONTACT</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -419,8 +419,8 @@
 
     </section><!-- /Portfolio Section -->
 
-    <!-- Blog Section - Neon Accordion -->
-    <section id="blog-accordion" class="section-black py-5">
+    <!-- Writing Section -->
+    <section id="writing" class="writing-section py-5">
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>WRITING</h2>
@@ -430,71 +430,49 @@
       <!-- Blog Container -->
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-        <div class="accordion" id="accordionBlog">
-
-          <!-- Article 1 -->
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="headingOne">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                David Bowie’s Ode to Sci-Fi and Space Science
-              </button>
-            </h2>
-            <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
-              data-bs-parent="#accordionBlog">
-              <div class="accordion-body">
-                <p>How David Bowie’s fascination with space shaped his music and influenced space culture itself.</p>
-                <a href="https://medium.com/@sashacheek100/david-bowies-ode-to-sci-fi-and-space-science-5bbd5e5f6546"
-                  target="_blank" class="btn btn-sm btn-primary">Read Full Article</a>
-              </div>
-            </div>
+    <div class="row justify-content-center">
+      <!-- ARTICLE CARD 1 -->
+      <div class="col-md-4 mb-4">
+        <div class="article-card">
+          <img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/1*wKlX15g3ACqx51mokKbSgQ.png" alt="David Bowie’s Ode to Sci-Fi" class="article-img">
+          <div class="article-content">
+            <h4 class="article-title">David Bowie’s Ode to Sci-Fi and Space Science</h4>
+            <p class="article-date">Published on Medium</p>
+            <a href="https://medium.com/@sashacheek100/david-bowies-ode-to-sci-fi-and-space-science-5bbd5e5f6546"
+              target="_blank" class="btn btn-neon">Read Article</a>
           </div>
+        </div>
+      </div>
 
-          <!-- Article 2 -->
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="headingTwo">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Automated Love: How AI Became the New Face of Romance
-              </button>
-            </h2>
-            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-              data-bs-parent="#accordionBlog">
-              <div class="accordion-body">
-                <p>An exploration of AI companions, chatbots, and the rise of technology-mediated romance.</p>
-                <a href="https://medium.com/@sashacheek100/automated-love-how-ai-became-the-new-face-of-romance-900d9d59a079"
-                  target="_blank" class="btn btn-sm btn-primary">Read Full Article</a>
-              </div>
-            </div>
+      <!-- ARTICLE CARD 2 -->
+      <div class="col-md-4 mb-4">
+        <div class="article-card">
+          <img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/0*Tv3QfLov-HJwoiiN" alt="Automated Love" class="article-img">
+          <div class="article-content">
+            <h4 class="article-title">Automated Love: How AI Became the New Face of Romance</h4>
+            <p class="article-date">Published on Medium</p>
+            <a href="https://medium.com/@sashacheek100/automated-love-how-ai-became-the-new-face-of-romance-900d9d59a079"
+              target="_blank" class="btn btn-neon">Read Article</a>
           </div>
+        </div>
+      </div>
 
-          <!-- Article 3 -->
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="headingThree">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Dealing with Early Signs of Alzheimer’s Disease in Loved Ones
-              </button>
-            </h2>
-            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
-              data-bs-parent="#accordionBlog">
-              <div class="accordion-body">
-                <p>Practical strategies and emotional insights when family members begin showing signs of Alzheimer’s.
-                </p>
-                <a href="https://medium.com/@sashacheek100/dealing-with-early-signs-of-alzheimers-disease-in-loved-ones-f40c4a5481f7"
-                  target="_blank" class="btn btn-sm btn-primary">Read Full Article</a>
-              </div>
-            </div>
+      <!-- ARTICLE CARD 3 -->
+      <div class="col-md-4 mb-4">
+        <div class="article-card">
+          <img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/0*x2mm18W8-WYL6Ahz" alt="Dealing with Alzheimer’s" class="article-img">
+          <div class="article-content">
+            <h4 class="article-title">Dealing with Early Signs of Alzheimer’s Disease in Loved Ones</h4>
+            <p class="article-date">Published on Medium</p>
+            <a href="https://medium.com/@sashacheek100/dealing-with-early-signs-of-alzheimers-disease-in-loved-ones-f40c4a5481f7"
+              target="_blank" class="btn btn-neon">Read Article</a>
           </div>
-
-        </div><!-- /.accordion -->
-
-        <!-- Neon bottom-left accents -->
-        <span class="corner-bottom-left"></span>
-        <span class="corner-bottom-left-vert"></span>
-      </div><!-- /.neon-paragraph -->
-    </section>
-    <!-- End Blog Section -->
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+    <!-- End Writing Section -->
 
     <!-- Testimonials Section -->
     <section id="testimonials" class="testimonials section-black">
