--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
     </section><!-- /Portfolio Section -->
 
     <!-- Writing Section -->
-    <section id="writing" class="writing-section py-5">
+    <section id="writing" class="section-class py-5">
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>WRITING</h2>
