--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+/>
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
@@ -143,44 +147,43 @@
 
       <div class="container justify-content-center">
 
-        <div class="row justify-content-center text-center">
-          <!-- Service 1 -->
-          <div class="col-lg-3 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
-            data-aos-delay="100">
-            <div class="icon cyber-icon"><i class="bi bi-lightbulb-fill"></i></div>
-            <h4 class="title">Technical Consulting & Integrations</h4>
-            <p class="description">
-              <span class="bullet">&bull; Streamline API architecture, systems engineering, and data feeds through clear
-                documentation and integration support.</span>
-            </p>
-          </div>
+     <div class="row justify-content-center text-center">
+      <!-- Service 1 -->
+      <div class="col-lg-3 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+        data-aos-delay="100">
+        <div class="icon cyber-icon"><i class="bi bi-lightbulb-fill"></i></div>
+        <h4 class="title">Technical Consulting & Integrations</h4>
+        <p class="description">
+          <span class="bullet">&bull; Streamline API architecture, systems engineering, and data feeds through clear
+            documentation and integration support.</span>
+        </p>
+      </div>
 
-          <!-- Service 2 -->
-          <div class="col-lg-3 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
-            data-aos-delay="200">
-            <div class="icon cyber-icon"><i class="bi bi-vector-pen"></i></div>
-            <h4 class="title">Science & Technology Writing</h4>
-            <p class="description">
-              <span class="bullet">&bull; Translate complex technical and scientific concepts into engaging,
-                research-driven narratives.</span>
-            </p>
-          </div>
+      <!-- Service 2 -->
+      <div class="col-lg-3 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+        data-aos-delay="200">
+        <div class="icon cyber-icon"><i class="bi bi-vector-pen"></i></div>
+        <h4 class="title">Science & Technology Writing</h4>
+        <p class="description">
+          <span class="bullet">&bull; Translate complex technical and scientific concepts into engaging,
+            research-driven narratives.</span>
+        </p>
+      </div>
 
-          <!-- Service 3 -->
-          <div class="col-lg-3 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
-            data-aos-delay="400">
-            <div class="icon cyber-icon"><i class="bi bi-person-arms-up"></i></div>
-            <h4 class="title">Mentorship & Advisory</h4>
-            <p class="description">
-              <span class="bullet">&bull; Provide guidance on technical career paths, resume development, and
-                integration best practices.</span>
-            </p>
-          </div>
-        </div><!-- End Row -->
+      <!-- Service 3 -->
+      <div class="col-lg-3 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+        data-aos-delay="400">
+        <div class="icon cyber-icon"><i class="bi bi-person-arms-up"></i></div>
+        <h4 class="title">Mentorship & Advisory</h4>
+        <p class="description">
+          <span class="bullet">&bull; Provide guidance on technical career paths, resume development, and integration
+            best practices.</span>
+        </p>
+      </div>
+    </div><!-- End Row -->
 
-
-      </div><!-- End container -->
-    </section><!-- /Services Section ---->
+  </div><!-- End container -->
+</section><!-- /Services Section -->
 
     <!-- Resume Section -->
     <section id="resume" class="resume section-black">
