--- a/index.html
+++ b/index.html
@@ -145,42 +145,40 @@
           organizations communicate clearly, streamline integrations, and strengthen engineering practices.</p>
       </div><!-- End Section Title -->
 
-      <div class="container justify-content-center">
+<div class="row justify-content-center text-center services-row">
+  <!-- Service 1 -->
+  <div class="col-md-4 col-sm-12 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+    data-aos-delay="100">
+    <div class="icon cyber-icon"><i class="bi bi-lightbulb-fill"></i></div>
+    <h4 class="title">Technical Consulting & Integrations</h4>
+    <p class="description">
+      <span class="bullet">&bull; Streamline API architecture, systems engineering, and data feeds through clear
+        documentation and integration support.</span>
+    </p>
+  </div>
 
-     <div class="row justify-content-center text-center">
-      <!-- Service 1 -->
-      <div class="col-lg-3 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
-        data-aos-delay="100">
-        <div class="icon cyber-icon"><i class="bi bi-lightbulb-fill"></i></div>
-        <h4 class="title">Technical Consulting & Integrations</h4>
-        <p class="description">
-          <span class="bullet">&bull; Streamline API architecture, systems engineering, and data feeds through clear
-            documentation and integration support.</span>
-        </p>
-      </div>
+  <!-- Service 2 -->
+  <div class="col-md-4 col-sm-12 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+    data-aos-delay="200">
+    <div class="icon cyber-icon"><i class="bi bi-vector-pen"></i></div>
+    <h4 class="title">Science & Technology Writing</h4>
+    <p class="description">
+      <span class="bullet">&bull; Translate complex technical and scientific concepts into engaging,
+        research-driven narratives.</span>
+    </p>
+  </div>
 
-      <!-- Service 2 -->
-      <div class="col-lg-3 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
-        data-aos-delay="200">
-        <div class="icon cyber-icon"><i class="bi bi-vector-pen"></i></div>
-        <h4 class="title">Science & Technology Writing</h4>
-        <p class="description">
-          <span class="bullet">&bull; Translate complex technical and scientific concepts into engaging,
-            research-driven narratives.</span>
-        </p>
-      </div>
-
-      <!-- Service 3 -->
-      <div class="col-lg-3 col-md-6 service-item d-flex flex-column align-items-center" data-aos="fade-up"
-        data-aos-delay="400">
-        <div class="icon cyber-icon"><i class="bi bi-person-arms-up"></i></div>
-        <h4 class="title">Mentorship & Advisory</h4>
-        <p class="description">
-          <span class="bullet">&bull; Provide guidance on technical career paths, resume development, and integration
-            best practices.</span>
-        </p>
-      </div>
-    </div><!-- End Row -->
+  <!-- Service 3 -->
+  <div class="col-md-4 col-sm-12 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+    data-aos-delay="400">
+    <div class="icon cyber-icon"><i class="bi bi-person-arms-up"></i></div>
+    <h4 class="title">Mentorship & Advisory</h4>
+    <p class="description">
+      <span class="bullet">&bull; Provide guidance on technical career paths, resume development, and integration best
+        practices.</span>
+    </p>
+  </div>
+</div>
 
   </div><!-- End container -->
 </section><!-- /Services Section -->
