--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
       <img src="assets/img/spacecraft-hero-bg.jpg" alt="" data-aos="fade-in">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <h2>Sasha Cheek<br></h2>
-        <p>I am <span class="typed"
+        <h1>Sasha Cheek<br></h1>
+        <h2>I am <span class="typed"
             data-typed-items="a Systems Integration Specialist, a Freelance Science Writer, bridging the gap between systems and narratives">Systems
-            Integration Specialist</span></p>
-        <p style="opacity: 0.8;">AI * APIs * Systems Engineering * Particle Physics * Space Science</p>
+            Integration Specialist</span></h2>
+        <h3 style="opacity: 0.8;">AI * APIs * Systems Engineering * Physics * Space Science</h3>
         <div class="social-links">
           <a href="https://medium.com/@sashacheek100"><i class="bi bi-medium"></i></a>
           <a href="https://github.com/scheek-100/scheek-100.github.io"><i class="bi bi-github"></i></a>
@@ -111,7 +111,7 @@
       <div class="section-title">
         <div class="container content-wrap" data-aos="fade-up">
           <div class="section-title">
-            <h2>ABOUT</h2>
+            <h1>ABOUT</h1>
 
           </div><!-- End Section Title -->
           <div class="row gy-4 justify-content-between" data-aos="fade-up" data-aos-delay="100">
@@ -140,7 +140,7 @@
 
       <!-- Section Title -->
       <div class="section-title" data-aos="fade-up">
-        <h2>SERVICES</h2>
+        <h1>SERVICES</h1>
         <p class="framed-subtitle">I provide technical consulting, science/technology writing, and mentorship to help
           organizations communicate clearly, streamline integrations, and strengthen engineering practices.</p>
       </div><!-- End Section Title -->
@@ -187,7 +187,7 @@
     <section id="resume" class="resume section-black">
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>RESUME</h2>
+        <h1>RESUME</h1>
         <p class="framed-subtitle">Experience and technical expertise at a glance.</p>
       </div><!-- End Section Title -->
 
@@ -304,7 +304,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Tech<br>PORTFOLIO</h2>
+        <h1>TECH<br>PORTFOLIO</h1>
         <p class="framed-subtitle">Applying engineering to real-world challenges, involving APIs and programming
           projects. More projects coming
           soon!</p>
@@ -424,7 +424,7 @@
     <section id="writing" class="writing section-black py-5">
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>WRITING</h2>
+        <h1>WRITING</h1>
         <p class="framed-subtitle">Recent published work on Medium — expand to preview each article.</p>
       </div>
 
@@ -480,7 +480,7 @@
 
       <!-- Section Title -->
       <div class="section-title" data-aos="fade-up">
-        <h2>TESTIMONIALS</h2>
+        <h1>TESTIMONIALS</h1>
         <p class="framed-subtitle">Results recognized by former colleagues, coworkers, and clients.</p>
       </div><!-- End Section Title -->
       <div data-aos="fade-up" data-aos-delay="100">
@@ -561,7 +561,7 @@
     <section id="contact" class="contact section-black">
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>CONTACT</h2>
+        <h1>CONTACT</h1>
         <p class="framed-subtitle">Have a question, need help with a project, or just talk about tech? I'm always happy
           to connect. Send me a
           message, and I will respond within 24-48 hours.</p>
