--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
       <!-- Section Title -->
       <div class="section-title" data-aos="fade-up">
         <h1>SERVICES</h1>
-        <p class="framed-subtitle">I provide technical consulting, science/technology writing, and mentorship to help
-          organizations communicate clearly, streamline integrations, and strengthen engineering practices.</p>
+        <h2 class="framed-subtitle">I provide technical consulting, science/technology writing, and mentorship to help
+          organizations communicate clearly, streamline integrations, and strengthen engineering practices.</h2>
       </div><!-- End Section Title -->
 
 <div class="row justify-content-center text-center services-row">
@@ -188,7 +188,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h1>RESUME</h1>
-        <p class="framed-subtitle">Experience and technical expertise at a glance.</p>
+        <h2 class="framed-subtitle">Experience and technical expertise at a glance.</h2>
       </div><!-- End Section Title -->
 
       <!-- Neon Framed Resume Body -->
@@ -302,9 +302,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h1>TECH<br>PORTFOLIO</h1>
-        <p class="framed-subtitle">Applying engineering to real-world challenges, involving APIs and programming
-          projects. More projects coming
-          soon!</p>
+        <h2 class="framed-subtitle">Applying engineering to real-world challenges, involving APIs and programming projects. More projects coming soon!</h2>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -422,7 +420,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h1>WRITING</h1>
-        <p class="framed-subtitle">Recent published work on Medium — expand to preview each article.</p>
+        <h2 class="framed-subtitle">Recent published work on Medium — expand to preview each article.</h2>
       </div>
 
       <!-- Blog Container -->
@@ -478,7 +476,7 @@
       <!-- Section Title -->
       <div class="section-title" data-aos="fade-up">
         <h1>TESTIMONIALS</h1>
-        <p class="framed-subtitle">Results recognized by former colleagues, coworkers, and clients.</p>
+        <h2 class="framed-subtitle">Results recognized by former colleagues, coworkers, and clients.</h2>
       </div><!-- End Section Title -->
       <div data-aos="fade-up" data-aos-delay="100">
 
@@ -559,9 +557,9 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h1>CONTACT</h1>
-        <p class="framed-subtitle">Have a question, need help with a project, or just talk about tech? I'm always happy
+        <h2 class="framed-subtitle">Have a question, need help with a project, or just talk about tech? I'm always happy
           to connect. Send me a
-          message, and I will respond within 24-48 hours.</p>
+          message, and I will respond within 24-48 hours.</h2>
       </div><!-- End Section Title -->
 
       <!-- Contact Container -->
